2.0.1
	+ Bugfix: certificate is re-issued if the hostname changes
	+ Added backup domain
1.5.5
	+ Zentyal rebrand
1.5.4
	+ Check if usersandgroups is configured instead of samba
1.5.3
	+ Enable the port available check using the new method
	  from services.
1.5.2
	+ Bugfix: keep the service internal on port update.
	+ Temporary disabled the listen port available check.
1.5.1
	+ Adds default-ssl vhost and ssl module management.
	+ Implements SSL integration between ebox-webserver and ebox-ca for
	  vhosts.
	+ Bugfix: logs are split up by vhost.
	+ Bugfix: vhosts DocumentRoot moved to /srv/www/domain.tld to keep
	  them separated from default vhost.
1.5
	+ Bugfix: NameVirtualHost directive in ports.conf and not in every vhost.
	+ Vhosts ServerAdmin now is root@fqdn.
	+ Handle default vhost for port, ServerAdmin values and including the
	  ServerName directive.
	+ Bugfix: allow non fqdn and topdomains as vhosts.
1.3.12
	+ Don't allow to enable public_html directories if samba modules
	is not configured because in this situation there aren't user home directories
	+ Add titles and headers
1.3.6
	+ Better validation of virtual host names
	+ Added warning when adding virtual hostames if the DNS module is
	not enabled
1.1.20
	+ New release
1.1
	+ Create /var/run/apache2 in upstart script
0.12.100
	+ New release
0.12.99
	+ New release
0.12
	+ Add help field to webserver model
	+ Bugfix. Do not add a dns domain if the virtual host
	  is just a host name with no domain
0.11.102
	+ Use the new EBox::Model::Row
0.11.101
	+ New upstream release
0.11.99
	+ First release